[package]
name = "database_test"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.5.0"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
indicatif = "0.17"
futures-util = "0.3" 
figlet-rs = "0.1.0"
once_cell = "1.9"
rand ="0.8"
colored = "2.0"